@@ -32,3 +32,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/walk/l.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/top.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/walk.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/walk/ver-d.sh added.
